--- a/project/views/index.ejs
+++ b/project/views/index.ejs
@@ -20,7 +20,10 @@
                 <% files.forEach((file)=>{ %>
                     <div class="task w-72 px-3 py-4 bg-zinc-800 rounded-md">
                 <h1 class="text-white text-3xl tracking-tighter mb-2"><%= file.replace('.txt' , '') %></h1>
-                <a class="text-blue-500 hover:text-blue-400 inhine-block" href="/read/<%= file %>">Read More →</a>
+                <div class="links flex w-full justify-between items-center">
+                    <a class="text-zinc-600 hover:text-zinc-400" href="/edit/<%= file %>">Edit</a>
+                    <a class="text-blue-500 hover:text-blue-400" href="/read/<%= file %>">Read More →</a>
+                </div>
                     </div>
                 <% }) %>
             <% }else { %>
